# braidMgr

./: docker-compose.yml  launch_claude.sh  launch_claude_pm.sh  mkdocs.yml  pyproject.toml  setup_dev_env.sh
.github/workflows/: ci.yml
backend/: .env.example
backend/src/api/: main.py
backend/src/api/dependencies/: auth.py
backend/src/api/routes/: __init__.py  activity.py  chat.py  items.py  projects.py  workstreams.py
backend/src/api/schemas/: __init__.py  items.py  projects.py  workstreams.py
backend/src/domain/: __init__.py  core.py
backend/src/repositories/: __init__.py  audit_log_repository.py  item_dependency_repository.py  item_note_repository.py  item_repository.py  project_repository.py  user_project_role_repository.py  workstream_repository.py
backend/src/services/: __init__.py  auth_service.py  chat_service.py  indicator_service.py  item_service.py  project_service.py  workstream_service.py
backend/tests/unit/: test_auth_service.py  test_indicator_service.py  test_item_repository.py  test_project_repository.py
braidmanager/: __init__.py  __main__.py  app.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  PATTERNS.md  PROCESS_FLOWS.md  REQUIREMENTS.md  STATUS.yaml  TEST_PLAN.md  USER_STORIES.md  backlog.md
docs/architecture/: ai-integration.md  frontend.md
docs/deployment/: cloudflare-pages.md
docs/patterns/: testing.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/features/: active-items.feature  dashboard.feature  demo.feature  items.feature  login.feature  registration.feature
frontend/e2e/steps/: active-items.steps.ts  auth.steps.ts  common.steps.ts  demo.steps.ts  items.steps.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/features/chat/: ChatContext.tsx  ChatDrawer.tsx  ChatInput.tsx  ChatMessage.tsx  CommandPalette.tsx  index.ts
frontend/src/components/features/chronology/: ChronologyView.tsx
frontend/src/components/features/dashboard/: DashboardView.tsx  SummaryCard.tsx
frontend/src/components/features/help/: HelpView.tsx
frontend/src/components/features/items/: ActiveItemsView.tsx  AllItemsView.tsx  EditItemDialog.tsx  ItemCard.tsx  ItemFilters.tsx  ItemTable.tsx  SeverityGroup.tsx
frontend/src/components/features/timeline/: TimelineView.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  index.ts
frontend/src/components/tour/: TourNavigation.tsx  TourOverlay.tsx  TourProvider.tsx  index.ts  tourSteps.ts  useTour.ts
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  skeleton.tsx  slider.tsx  table.tsx  textarea.tsx
frontend/src/hooks/: index.ts  useActivity.ts  useChat.ts  useItems.ts  useProjects.ts  useWorkstreams.ts
frontend/src/lib/: indicators.test.ts  indicators.ts
frontend/src/stores/: filterStore.ts
frontend/src/types/: index.ts  item.ts  project.ts  workstream.ts
frontend/tests/: demo-walkthrough.spec.ts
src/core/: paths.py  templates.py
src/ui_qt/: app.py
src/ui_qt/views/: chronology.py
